major removal of old artifacts + card list sketch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,8 +40,10 @@
       </mat-list>
     </mat-drawer>
   
-    <div class="main-content">
-      <router-outlet></router-outlet>
-    </div>
+    <mat-drawer-content>
+      <div class="main-content">
+        <router-outlet></router-outlet>
+      </div>
+    </mat-drawer-content>
   
   </mat-drawer-container>
