--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
-<app-toolbar (onMenu)="drawer.toggle()"></app-toolbar>
+<div class="app-container">
+<app-toolbar class="app-toolbar" (onMenu)="drawer.toggle()"></app-toolbar>
 <mat-drawer-container class="example-container">
     <mat-drawer #drawer class="example-sidenav" mode="side">
       <mat-list class="navigation-container">
@@ -47,3 +48,4 @@
     </mat-drawer-content>
   
   </mat-drawer-container>
+  </div>
