added nord theme

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,12 +7,17 @@
 }
 
 .navigation-container {
+    padding: 1.2rem;
     width: 200px;
     height: 100%;
 }
 
+.nav-icon {
+    padding-right: 0.5rem;
+}
+
 .navigation-item {
-    margin-bottom: 1rem;
+    margin-bottom: 1.2rem;
 }
 
 .navigation-item-content {
