--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       <mat-list class="navigation-container">
         <mat-list-item class="navigation-item" (click)="goMap()"> 
           <div class="navigation-item-content">
-          <span class="material-symbols-outlined">
+          <span class="nav-icon material-symbols-outlined">
           map
           </span>
           Map
@@ -16,23 +16,16 @@
         </mat-list-item>
         <mat-list-item class="navigation-item" (click)="goList()">
           <div class="navigation-item-content">
-          <span class="material-symbols-outlined">
+          <span class="nav-icon material-symbols-outlined">
             list
             </span>
           List
           </div>
         </mat-list-item>
-        <mat-list-item class="navigation-item">
-          <div class="navigation-item-content">
-          <span class="material-symbols-outlined">
-            description
-            </span>
-          About
-          </div>
-        </mat-list-item>
+
         <mat-list-item class="navigation-item" (click)="goCreateNew()">
           <div class="navigation-item-content">
-          <span class="material-symbols-outlined">
+          <span class="nav-icon material-symbols-outlined">
             pin_drop
             </span>
           AddNew
