currently disabled stacks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,14 +20,14 @@
             List
           </div>
         </mat-list-item>
-        <mat-list-item class="navigation-item" (click)="goStacksList()">
+        <!-- <mat-list-item class="navigation-item" (click)="goStacksList()">
           <div class="navigation-item-content">
             <span class="nav-icon material-symbols-outlined">
               collections_bookmark
             </span>
             Stacks
           </div>
-        </mat-list-item>
+        </mat-list-item> -->
 
         <mat-list-item class="navigation-item" (click)="goCreateNew()">
           <div class="navigation-item-content">
