--- a/src/app/components/cards/card-details/card-details.component.scss
+++ b/src/app/components/cards/card-details/card-details.component.scss
@@ -5,8 +5,13 @@
   padding: 10px;
   margin-top: 10px;
 }
+.navigate-to-postion-button {
+  position: absolute;
+}
+
 
 .region-image-button {
+  all: unset;
   height: 67px;
   width: 100px;
   
@@ -20,6 +25,7 @@
   flex-grow: 1;
 }
 .card-details-side-nav {
+  width: 200px;
   display: flex;
   border: solid;
   border-color: #cccccc;
@@ -60,9 +66,10 @@
 
   &--properties {
     flex-grow: 1;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     margin: 2rem;
+    margin-top: 4rem;
   }
   &--buttons {
     display: flex;
@@ -85,7 +92,7 @@
 }
 .card-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .container {
