removed description from image

--- a/src/app/components/images/image-list/image-list.component.html
+++ b/src/app/components/images/image-list/image-list.component.html
@@ -27,12 +27,7 @@
       <div class="content-grid">
         <h3>{{ image.name }}</h3>
         <mat-card-content class="card-content">
-          <img
-            class="centered-image"
-            [src]="image.imageSource"
-            [alt]="image.description"
-          />
-          <p>{{ image.description }}</p>
+          <img class="centered-image" [src]="image.imageSource" />
         </mat-card-content>
       </div>
     </mat-card>
