--- a/src/app/components/images/image-list/image-list.component.html
+++ b/src/app/components/images/image-list/image-list.component.html
@@ -1,6 +1,6 @@
 <div class="image-list">
-  <mat-form-field class="example-form-field">
-    <mat-label>Clearable input</mat-label>
+  <mat-form-field class="name-filter-input">
+    <mat-label>Namens Filter</mat-label>
     <input
       matInput
       type="text"
@@ -19,16 +19,29 @@
     }
   </mat-form-field>
   <div class="gridbox">
-    <mat-card
-      *ngFor="let image of images"
-      class="gridbox_item"
-      (click)="onSelectImage(image)"
-    >
+    <mat-card *ngFor="let image of images" class="gridbox_item">
       <div class="content-grid">
-        <h3>{{ image.name }}</h3>
-        <mat-card-content class="card-content">
-          <img class="centered-image" [src]="image.imageSource" />
-        </mat-card-content>
+        <mat-form-field class="name-input-field">
+          <mat-label>Bild Name</mat-label>
+          <input
+            matInput
+            type="text"
+            [ngModel]="image.name"
+            (ngModelChange)="changeImageName(image, $event)"
+          />
+        </mat-form-field>
+        <img
+          class="centered-image"
+          (click)="onSelectImage(image)"
+          [src]="image.imageSource"
+        />
+        <button
+          mat-icon-button
+          (click)="onDeleteImage(image)"
+          class="delete-button"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
       </div>
     </mat-card>
   </div>
