--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,6 @@ body {
   border-radius: 50%;
   transition: all 1s ease;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
