--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,6 +1,6 @@
 // @import '@angular/material/theming';
 // @include mat-core();
-// /* ======== Angular material custom themes ======== */
+// __<<ngM2ThemingMigrationEscapedComment0>>__
 // $my-custom-primary: mat-palette($mat-deep-purple);
 // $my-custom-accent: mat-palette($mat-pink, 100, 500, A100);
 // $my-custom-warn: mat-palette($mat-lime);
@@ -35,19 +35,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 
 $fontConfig: (
-  display-4: mat.define-typography-level(112px, 112px, 300, "Roboto", -0.0134em),
-  display-3: mat.define-typography-level(56px, 56px, 400, "Roboto", -0.0089em),
-  display-2: mat.define-typography-level(45px, 48px, 400, "Roboto", 0em),
-  display-1: mat.define-typography-level(34px, 40px, 400, "Roboto", 0.0074em),
-  headline: mat.define-typography-level(24px, 32px, 400, "Roboto", 0em),
-  title: mat.define-typography-level(20px, 32px, 500, "Roboto", 0.0075em),
-  subheading-2: mat.define-typography-level(16px, 28px, 400, "Roboto", 0.0094em),
-  subheading-1: mat.define-typography-level(15px, 24px, 500, "Roboto", 0.0067em),
-  body-2: mat.define-typography-level(14px, 24px, 500, "Roboto", 0.0179em),
-  body-1: mat.define-typography-level(14px, 20px, 400, "Roboto", 0.0179em),
-  button: mat.define-typography-level(14px, 14px, 500, "Roboto", 0.0893em),
-  caption: mat.define-typography-level(12px, 20px, 400, "Roboto", 0.0333em),
-  input: mat.define-typography-level(inherit, 1.125, 400, "Roboto", 1.5px),
+  display-4: mat.m2-define-typography-level(112px, 112px, 300, "Roboto", -0.0134em),
+  display-3: mat.m2-define-typography-level(56px, 56px, 400, "Roboto", -0.0089em),
+  display-2: mat.m2-define-typography-level(45px, 48px, 400, "Roboto", 0em),
+  display-1: mat.m2-define-typography-level(34px, 40px, 400, "Roboto", 0.0074em),
+  headline: mat.m2-define-typography-level(24px, 32px, 400, "Roboto", 0em),
+  title: mat.m2-define-typography-level(20px, 32px, 500, "Roboto", 0.0075em),
+  subheading-2: mat.m2-define-typography-level(16px, 28px, 400, "Roboto", 0.0094em),
+  subheading-1: mat.m2-define-typography-level(15px, 24px, 500, "Roboto", 0.0067em),
+  body-2: mat.m2-define-typography-level(14px, 24px, 500, "Roboto", 0.0179em),
+  body-1: mat.m2-define-typography-level(14px, 20px, 400, "Roboto", 0.0179em),
+  button: mat.m2-define-typography-level(14px, 14px, 500, "Roboto", 0.0893em),
+  caption: mat.m2-define-typography-level(12px, 20px, 400, "Roboto", 0.0333em),
+  input: mat.m2-define-typography-level(inherit, 1.125, 400, "Roboto", 1.5px),
 );
 
 // Foreground Elements
@@ -190,7 +190,7 @@ $mat-primary: (
       darker: $light-primary-text,
     ),
 );
-$theme-primary: mat.define-palette($mat-primary, main, lighter, darker);
+$theme-primary: mat.m2-define-palette($mat-primary, main, lighter, darker);
 
 body {
   --accent-color: #88c1d0;
@@ -213,7 +213,7 @@ $mat-accent: (
       darker: $dark-primary-text,
     ),
 );
-$theme-accent: mat.define-palette($mat-accent, main, lighter, darker);
+$theme-accent: mat.m2-define-palette($mat-accent, main, lighter, darker);
 
 body {
   --warn-color: #bf616a;
@@ -236,7 +236,7 @@ $mat-warn: (
       darker: $light-primary-text,
     ),
 );
-$theme-warn: mat.define-palette($mat-warn, main, lighter, darker);
+$theme-warn: mat.m2-define-palette($mat-warn, main, lighter, darker);
 $theme: (
   primary: $theme-primary,
   accent: $theme-accent,
