add markercluster to leaflet to cluster markers depending on zoom level

--- a/src/app/components/overview-map/overview-map.component.html
+++ b/src/app/components/overview-map/overview-map.component.html
@@ -5,10 +5,15 @@
       [style]="{ cursor: cursorStyle }"
       leaflet
       [leafletOptions]="options"
-      [leafletLayers]="layers"
+      [leafletLayers]="overviewMapService.selectedLayerGroup.getLayers()"
+      [leafletMarkerCluster]="[]"
+      [leafletMarkerClusterOptions]="markerClusterOptions"
       (leafletMapReady)="onMapReady($event)"
       (leafletMapMoveEnd)="mapMoveEnded()"
-    ></div>
+      (leafletMarkerClusterReady)="markerClusterReady($event)"
+    >
+      >
+    </div>
   </div>
 
   @if (selectedMarker()) {
