--- a/src/app/components/overview-map/map-settings/map-settings.component.html
+++ b/src/app/components/overview-map/map-settings/map-settings.component.html
@@ -1,3 +1,7 @@
+<div class="example-label-container">
+  <label>Max Cluster Size</label>
+  <label class="example-value-label">{{ mapSettings.maxClusterSize }}</label>
+</div>
 <mat-slider [max]="100" [min]="1">
   <input
     matSliderThumb
