--- a/src/app/components/cards/card-details/card-details.component.html
+++ b/src/app/components/cards/card-details/card-details.component.html
@@ -54,7 +54,7 @@
           </ng-container>
 
           <div class="card-content">
-            <h1>{{ card.title }}</h1>
+            <B>{{ card.title }}</B>
             <p>
               {{ card.description }}
             </p>
@@ -77,5 +77,5 @@
   </div>
 </div>
 <div class="container">
-  <app-editor [cardTitleMapping]="cardTitleMapping"></app-editor>
+  <app-editor></app-editor>
 </div>
