--- a/src/app/layout/editor/editor.component.html
+++ b/src/app/layout/editor/editor.component.html
@@ -54,11 +54,12 @@
           />
         </mat-form-field>
       </form>
-      <ng-container *ngFor="let opt of cardTitleMapping | filter: searchText">
-        <button mat-menu-item (click)="onLink(opt.id, opt.title)">
-          {{ opt.title }}
-        </button>
-      </ng-container>
+      <!--        TODO i need to find a way of linking docs-->
+      <!--      <ng-container *ngFor="let opt of cardTitleMapping | filter: searchText">-->
+      <!--        <button mat-menu-item (click)="onLink(opt.id, opt.title)">-->
+      <!--          {{ opt.title }}-->
+      <!--        </button>-->
+      <!--      </ng-container>-->
     </div>
   </mat-menu>
   <div id="editor-container"></div>
