--- a/src/app/components/cards/card-details/card-details.component.html
+++ b/src/app/components/cards/card-details/card-details.component.html
@@ -33,7 +33,7 @@
               @if (regionImage$ | async) {
                 <button
                   class="region-image-button"
-                  data-testid="card-pan-to-lat-lng-image-button"
+                  data-testid="show-on-map-button"
                   (click)="panToLatLng(card.markers)"
                 >
                   <img
@@ -47,6 +47,7 @@
                   mat-mini-fab
                   data-testid="card-pan-to-lat-lng-mini-button"
                   color="warn"
+                  data-testid="show-on-map-button"
                   (click)="panToLatLng(card.markers)"
                   aria-label="Example icon button with a home icon"
                 >
