--- a/src/app/components/overview-map/overview-map.component.html
+++ b/src/app/components/overview-map/overview-map.component.html
@@ -37,11 +37,11 @@
           [visible]="updateCardVisible"
           (visibleChange)="
             updateCardVisible = false;
-            this.overviewMapService.changeSelectedMarkerAM(undefined)
+            this.overviewMapService.changeSelectedMarker(undefined)
           "
         >
           <app-card-input
-            [card]="editCard()"
+            [card]="cardMetadata()"
             (cardChange)="updateSelectedCard($event)"
           ></app-card-input>
           <app-marker-input
@@ -49,30 +49,13 @@
             (markerChange)="updateSelectedMarker($event)"
           ></app-marker-input>
           <span class="marker-input__buttons">
-            <span class="marker-input__buttons--marker-options">
-              <button
-                mat-raised-button
-                color="accent"
-                (click)="onAddNewMarkerToCard()"
-              >
-                Neuer Marker
-              </button>
-
-              <button
-                mat-raised-button
-                color="accent"
-                (click)="onMoveExistingMarker()"
-              >
-                Marker bewegen
-              </button>
-              <button
-                mat-raised-button
-                color="warn"
-                (click)="onDeleteSelectedMarker()"
-              >
-                Marker Loeschen
-              </button>
-            </span>
+            <button
+              mat-raised-button
+              color="accent"
+              (click)="onMoveExistingMarker()"
+            >
+              Marker bewegen
+            </button>
             <button
               mat-raised-button
               color="primary"
