fix bug that stack id was not transmitted to card-input component

--- a/src/app/components/overview-map/overview-map.component.html
+++ b/src/app/components/overview-map/overview-map.component.html
@@ -41,7 +41,7 @@
           "
         >
           <app-card-input
-            [card]="cardMetadata()"
+            [card]="cardMetadata()!"
             (cardChange)="updateSelectedCard($event)"
           ></app-card-input>
           <app-marker-input
